--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+text {
+    user-select: none;
+}
+
 .container {
     margin: 15px;
+    max-width: 200px;
+}
+
+.container object {
+    /* max-width: 200px; */
 }
